--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/briefcase.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resume-ai-blueprint</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Nexprofile - AI-Powered Resume Builder & LinkedIn Optimizer</title>
+    <meta name="description" content="Create stunning resumes and optimize your LinkedIn profile with Nexprofile's AI-powered tools." />
+    <meta name="author" content="Nexprofile" />
 
-    <meta property="og:title" content="resume-ai-blueprint" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Nexprofile - AI Resume Builder" />
+    <meta property="og:description" content="Create stunning resumes and optimize your LinkedIn profile with Nexprofile's AI-powered tools." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://nexprofile.com/opengraph-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Nexprofile - AI Resume Builder" />
+    <meta name="twitter:description" content="Create stunning resumes and optimize your LinkedIn profile with Nexprofile's AI-powered tools." />
+    <meta name="twitter:image" content="https://nexprofile.com/opengraph-image.png" />
   </head>
 
   <body>
